--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^2.0.7",
     "vss-web-extension-sdk": "2.117.0"
   },
-  "name": "vsts-extension-ts-seed-simple",
+  "name": "vsts-scrum-info",
   "private": true,
   "version": "0.7.0"
 }
