--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     ],
     "files": [
         "scripts/app.ts",
-        "scripts/logic/messageHelper.ts"
+        "scripts/logic/messageHelper.ts",
+        "scripts/logic/workItemCalculations.ts"
     ]
 }
