--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ dist
 build
 test
 .baseDir.ts
+/ToniSubi.vsts-scrum-info-dev-0.1.21.vsix
+/ToniSubi.vsts-scrum-info-dev-0.1.20.vsix
+/ToniSubi.vsts-scrum-info-dev-0.1.19.vsix
+/ToniSubi.vsts-scrum-info-dev-0.1.18.vsix
+/ToniSubi.vsts-scrum-info-0.1.27.vsix
+/ToniSubi.vsts-scrum-info-0.1.26.vsix
+/ToniSubi.vsts-scrum-info-0.1.25.vsix
+/ToniSubi.vsts-scrum-info-0.1.24.vsix
+/ToniSubi.vsts-scrum-info-0.1.23.vsix
+/ToniSubi.vsts-scrum-info-0.1.22.vsix
