--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ test
 /ToniSubi.vsts-scrum-info-0.1.24.vsix
 /ToniSubi.vsts-scrum-info-0.1.23.vsix
 /ToniSubi.vsts-scrum-info-0.1.22.vsix
+/login_tfs.cmd - Shortcut.lnk
